--- a/kubernetes/php-deployer.yaml
+++ b/kubernetes/php-deployer.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: php
-        image: papasy/projetphp1
+        image: papasy/projet1php
         ports:
         - containerPort: 80
